TABLES/IPTABLES
ORGANIZED VERSION


# Generated by iptables-save v1.8.7 on Tue Jun 13 10:25:17 2023
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A INPUT -p tcp -m tcp -m multiport --dports 22,80,443,2222,3389 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 172.31.0.0/30 -p icmp -m icmp --icmp-type 8 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i ens224 -p icmp -m icmp --icmp-type 8 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p udp -m udp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m limit --limit 30/min -j LOG --log-prefix "IPT:INP:Denied: " --log-level 7
-A INPUT -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i ens192 -o ens256 -p tcp -m tcp -m multiport --dports 80,443 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens256 -o ens192 -p tcp -m tcp -m multiport --sports 80,443 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens224 -o ens256 -p tcp -m tcp -m multiport --dports 20,21,22,80,443 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens256 -o ens224 -p tcp -m tcp -m multiport --sports 20,21,22,80,443 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens224 -o ens256 -p icmp -m icmp --icmp-type 8 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens256 -o ens224 -p icmp -m icmp --icmp-type 0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens224 -o ens192 -p tcp -m tcp -m multiport --dports 22,80,443 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens192 -o ens224 -p tcp -m tcp -m multiport --sports 22,80,443 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens224 -o ens192 -p icmp -m icmp --icmp-type 8 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens192 -o ens224 -p icmp -m icmp --icmp-type 0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens256 -o ens192 -p icmp -m icmp --icmp-type 8 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens192 -o ens256 -p icmp -m icmp --icmp-type 0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens224 -o ens192 -p udp -m udp -m multiport --dports 53,443 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens192 -o ens224 -p udp -m udp -m multiport --sports 53,443 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m limit --limit 30/min -j LOG --log-prefix "IPT:INP:Denied: " --log-level 7
-A FORWARD -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -p icmp -m icmp --icmp-type 8 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p udp -m udp -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -m limit --limit 30/min -j LOG --log-prefix "IPT:INP:Denied: " --log-level 7
-A OUTPUT -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Tue Jun 13 10:25:17 2023
# Generated by iptables-save v1.8.7 on Tue Jun 13 10:25:17 2023
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -i ens192 -p tcp -m tcp -m multiport --dports 80,443 -j DNAT --to-destination 172.31.0.2
-A PREROUTING -i ens192 -p tcp -m tcp --dport 2222 -j DNAT --to-destination 172.31.0.2:22
-A PREROUTING -i ens192 -p tcp -m tcp --dport 3389 -j DNAT --to-destination 192.168.31.2
-A POSTROUTING -o ens192 -j MASQUERADE
COMMIT
# Completed on Tue Jun 13 10:25:17 2023


—----------------------------------------------------------------------------------------------------------------------------default almost 

# Generated by iptables-save v1.8.7 on Wed Jun 21 11:11:31 2023
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p tcp -m multiport --dports 22,80,443,2222,3389 -j ACCEPT
-A INPUT -p tcp -m tcp -m multiport --dports 22,80,443,2222,3389 -m state --state NEW,RELATED,ESTABLISH>
COMMIT
# Completed on Wed Jun 21 11:11:31 2023
# Generated by iptables-save v1.8.7 on Wed Jun 21 11:11:31 2023
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -p tcp -m tcp -m multiport --dports 80,443 -j DNAT --to-destination 172.31.0.2
-A PREROUTING -p tcp -m tcp --dport 2222 -j DNAT --to-destination 172.31.0.2:22
-A PREROUTING -p tcp -m tcp --dport 3389 -j DNAT --to-destination 192.168.31.2
-A POSTROUTING -o ens192 -j MASQUERADE
COMMIT
# Completed on Wed Jun 21 11:11:31 2023
